fix table align

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ table{
 .stiletab{
     background-color: deepskyblue;
     color: white;
+    text-align: left;
 }
 .blu{
     background-color: turquoise;
